add and modify gitignore

--- a/First_request.ipynb
+++ b/First_request.ipynb
@@ -2,44 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "96b8d92d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4760a6f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openai.api_key = '***'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "bf4d3575",
+   "execution_count": 19,
+   "id": "4bab7e26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-7C1QRvzrmt3k4FiUxAZa8vALMuRBf at 0x143fbe21b80> JSON: {\n",
+       "'blue'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "from dotenv import dotenv_values\n",
+    "\n",
+    "config = dotenv_values('.env')\n",
+    "\n",
+    "config['COLOR']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "39e415b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai.api_key = config['OPENAI_API_KEY']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1824d8f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject text_completion id=cmpl-7C2KeNarKYc37Syo6t1ECs5JKHikv at 0x143fbeac040> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"length\",\n",
        "      \"index\": 0,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\n\\nThere is no one definitive answer to this question as it depends on the\"\n",
+       "      \"text\": \"\\n\\nThe most common way of measuring success is by financial metrics such as profits\"\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1683099771,\n",
-       "  \"id\": \"cmpl-7C1QRvzrmt3k4FiUxAZa8vALMuRBf\",\n",
+       "  \"created\": 1683103256,\n",
+       "  \"id\": \"cmpl-7C2KeNarKYc37Syo6t1ECs5JKHikv\",\n",
        "  \"model\": \"text-davinci-003\",\n",
        "  \"object\": \"text_completion\",\n",
        "  \"usage\": {\n",
@@ -50,7 +66,7 @@
        "}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30fb910",
+   "id": "2ff2e944",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a309afe",
+   "id": "64659ac6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -81,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e552d2d",
+   "id": "b6341bbc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -89,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4146689d",
+   "id": "2304170b",
    "metadata": {},
    "outputs": [],
    "source": []
