Stop sequences, Echo and N

--- a/First_request.ipynb
+++ b/First_request.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "4bab7e26",
+   "execution_count": 31,
+   "id": "77c069a2",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "'blue'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "39e415b0",
+   "execution_count": 32,
+   "id": "8d04b65d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,35 +38,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "1824d8f3",
+   "execution_count": 33,
+   "id": "df8d3eca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-7C2KeNarKYc37Syo6t1ECs5JKHikv at 0x143fbeac040> JSON: {\n",
+       "<OpenAIObject text_completion id=cmpl-7C2nCzbIIjJMLamSCodiSPjSfzuC3 at 0x143fbe83f90> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
-       "      \"finish_reason\": \"length\",\n",
+       "      \"finish_reason\": \"stop\",\n",
        "      \"index\": 0,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\n\\nThe most common way of measuring success is by financial metrics such as profits\"\n",
+       "      \"text\": \"\\n\\n1. Tokyo, Japan\\n2. Delhi, India\\n3. Shanghai, China\\n4. Sao Paulo, Brazil\\n5. Mexico City, Mexico\\n6. Cairo, Egypt\\n7. Mumbai, India\\n8. Beijing, China\\n9. Dhaka, Bangladesh\\n10. Osaka, Japan\"\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1683103256,\n",
-       "  \"id\": \"cmpl-7C2KeNarKYc37Syo6t1ECs5JKHikv\",\n",
+       "  \"created\": 1683105026,\n",
+       "  \"id\": \"cmpl-7C2nCzbIIjJMLamSCodiSPjSfzuC3\",\n",
        "  \"model\": \"text-davinci-003\",\n",
        "  \"object\": \"text_completion\",\n",
        "  \"usage\": {\n",
-       "    \"completion_tokens\": 16,\n",
-       "    \"prompt_tokens\": 3,\n",
-       "    \"total_tokens\": 19\n",
+       "    \"completion_tokens\": 64,\n",
+       "    \"prompt_tokens\": 8,\n",
+       "    \"total_tokens\": 72\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,14 +74,15 @@
    "source": [
     "openai.Completion.create(\n",
     "  model = 'text-davinci-003',\n",
-    "  prompt = 'How are '\n",
+    "  prompt = 'The top 10 populated cities are: ',\n",
+    "  max_tokens = 100\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ff2e944",
+   "id": "97528f62",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -89,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64659ac6",
+   "id": "6b220d77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6341bbc",
+   "id": "7e018095",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2304170b",
+   "id": "9420d43d",
    "metadata": {},
    "outputs": [],
    "source": []
