Echo command addition

--- a/Echo and N.ipynb
+++ b/Echo and N.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "831a0c39",
+   "id": "850aca18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d529de2b",
+   "id": "8b98e0b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "81cbb29d",
+   "id": "f3a16f3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "49ff2ae4",
+   "id": "d76db3c9",
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +91,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ffdb0f6",
+   "execution_count": 11,
+   "id": "ce57ea6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git add .\n",
-    "!git commit -m \"Stop sequences, Echo and N\""
+    "response = openai.Completion.create(\n",
+    "  prompt = 'Q: What is the tallest building in the world?',\n",
+    "  model = 'text-davinci-003',\n",
+    "  max_tokens = 100,\n",
+    "  echo = True\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3f13341d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject text_completion id=cmpl-7C387IZ1PA6Dj0gMIoucsTMnE7lIv at 0x1714ae0d9f0> JSON: {\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"finish_reason\": \"stop\",\n",
+       "      \"index\": 0,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \"Q: What is the tallest building in the world?\\n\\nA: The Burj Khalifa in Dubai, United Arab Emirates is the tallest building in the world. The Burj Khalifa stands 829.8 metres (2,722 feet) tall and has 163 floors.\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"created\": 1683106323,\n",
+       "  \"id\": \"cmpl-7C387IZ1PA6Dj0gMIoucsTMnE7lIv\",\n",
+       "  \"model\": \"text-davinci-003\",\n",
+       "  \"object\": \"text_completion\",\n",
+       "  \"usage\": {\n",
+       "    \"completion_tokens\": 47,\n",
+       "    \"prompt_tokens\": 11,\n",
+       "    \"total_tokens\": 58\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a15107c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
